[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptdungeon"
version = "0.1.0"
description = "AI powered dungeon crawler where prompts become adventures"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Shashank Shankar Jha", email = "shashankshankar77@gmail.com" },
]
keywords = [
  "ai",
  "llm",
  "game",
  "dungeon-crawler",
  "terminal",
  "ascii",
  "roguelike",
  "llm-game",
  "ai-game",
  "prompt-engineering",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment :: Role-Playing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]

dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.24.0",
  "pydantic>=2.0.0",
  "colorama>=0.4.6",
]

# Optional dependencies
[project.optional-dependencies]
# Input handling
input = ["keyboard>=0.13.5", "pynput>=1.7.6"]

# LLM providers
openai = ["openai>=1.0.0"]
gemini = ["google-generativeai>=0.3.0"]
anthropic = ["anthropic>=0.3.0"]

dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
  "pre-commit>=3.0.0",
]

# Complete installation
all = [
  "keyboard>=0.13.5",
  "pynput>=1.7.6",
  "openai>=1.0.0",
  "google-generativeai>=0.3.0",
  "anthropic>=0.3.0",
]

#Homepage = "https://github.com/why-shashank/promptdungeon"
#Documentation = "https://github.com/why-shashank/promptdungeon#readme"
#Repository = "https://github.com/why-shashank/promptdungeon"
#"Bug Tracker" = "https://github.com/why-shashank/promptdungeon/issues"
#
[project.scripts]
promptdungeon = "promptdungeon.main:main"
pd = "promptdungeon.main:main"            # Short alias

[tool.hatch.build.targets.wheel]
packages = ["promptdungeon"]

[tool.hatch.version]
path = "promptdungeon/__init__.py"

# Development tools configuration
[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "N", "W", "B"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=promptdungeon --cov-report=html --cov-report=term-missing"
