
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptdungeon"
version = "0.1.0"
description = "AI powered dungeon crawler where prompts become adventures"
requires-python = ">=3.9"

dependencies = [
    "typer>=0.9.0",
    "rich>=14.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "colorama>=0.4.6",
    "requests>=2.0.0",
]
